--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "font-awesome": "^4.7.0",
+    "i18next": "^23.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.3",
     "react-router-dom": "^6.14.2",
     "three": "^0.155.0"
   },
